# lab05

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
banking/: CMakeLists.txt
tests/: test.cpp
